<resources>
    <string name="app_name">AMAP</string>
    <string name="action_settings">Settings</string>
    <string name="username">Email Address</string>
    <string name="password">Password</string>
    <string name="auth_error">Authentication error</string>
    <string name="login_failed">Login Failed</string>
    <string name="your_account_is_locked">Your account is locked.</string>
    <string name="your_access_token_is_invalid">Your access token is invalid.</string>
    <string name="your_access_token_has_expired">Your access token has expired.</string>
    <string name="your_access_token_is_not_linked_with_this_application">Your access token is not
        linked with this application.</string>
    <string name="could_not_find_application">Could not find application.</string>
    <string name="could_not_authenticate_access_code">Could not authenticate access code.</string>
    <string name="you_must_provide_a_client_object">You must provide a client object.</string>
    <string name="this_application_is_not_approved_by_ayla">This application is not approved by
        Ayla Networks.</string>
    <string name="the_authentication_token_is_invalid">The authentication token is invalid.</string>
    <string name="the_refresh_token_is_invalid">The refresh token is invalid.</string>
    <string name="could_not_find_this_application_for_sign_up">Could not find this application for
        sign-up!</string>
    <string name="you_are_forbidden_to_perform_this_operation">You are forbidden to perform this
        operation</string>
    <string name="missing_oem_parameter">Missing OEM parameter.</string>
    <string name="unauthorized">Unauthorized.</string>
    <string name="invalid_json_format">Invalid Json format.</string>
    <string name="an_unexpected_error_please_try_again_later">An unexpected error. Please try again
        later.</string>
    <string name="you_are_already_sign_in">You are already signed in.</string>
    <string name="you_need_to_sign_in_or_sign_up_before_continuing">You need to sign in or sign up
        before continuing.</string>
    <string name="you_have_to_confirm_your_account_before_continuing">You have to confirm your
        account before continuing.</string>
    <string name="invalid_authentication_token">Invalid authentication token.</string>
    <string name="your_session_expired_please_sign_in_again_to_continue">Your session expired,
        please sign in again to continue.</string>
    <string name="your_account_was_not_activated_yet">Your account was not activated yet.</string>
    <string name="your_account_has_not_been_approved_by_an_administrator_yet">Your account has not
        been approved by an administrator
        yet
        .</string>
    <string name="the_email_address_has_not_signed_up_for_an_account">The email address has not
        signed up for an account
        .</string>
    <string name="unknown_app_version">Unknown Version</string>
    <string name="ok">OK</string>
    <string name="all_devices">All Devices</string>
    <string name="log_out">Log Out</string>
    <string name="login_register">Login / Register</string>
    <string name="please_log_in">Please log in</string>
    <string name="no_devices_found">No devices were found.\n\n<i>Push \"Scan for Devices\" to retry or \"Register\" to find devices already connected to the WiFi network</i></string>
    <string name="open">OPEN</string>
    <string name="closed">CLOSED</string>
    <string name="on">Turn On</string>
    <string name="off">Turn Off</string>
    <string name="device_state_unknown">UNKNOWN</string>
    <string name="smart_plug">Smart Plug</string>
    <string name="notifications">Notifications</string>
    <string name="schedule">Schedule</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="remote">Remote</string>
    <string name="remote_paired_devices">Paired Devices</string>
    <string name="remote_paired_remote">Paired Remote</string>
    <string name="remote_add">Pair</string>
    <string name="remote_remove">Unpair</string>
    <string name="trigger">Trigger</string>
    <string name="identify">Identify</string>
    <string name="device_properties">Properties</string>
    <string name="up">Sign Up</string>
    <string name="forgot">Forgot Password</string>
    <string name="resend_confirmation">Re-send Email Confirmation</string>
    <string name="signIn">Sign In</string>
    <string name="userInformation">User Information</string>
    <string name="emailAddress">Email Address</string>
    <string name="newEmailAddress">New Email</string>
    <string name="role">Role</string>
    <string name="passwordHint">Password</string>
    <string name="currentPassword">Current Password</string>
    <string name="newPassword">New Password</string>
    <string name="newPasswordConfirm">Confirm New Password</string>
    <string name="signingIn">Signing in...</string>
    <string name="signingUp">Signing up...</string>
    <string name="confirmPassword">confirm password</string>
    <string name="lastName">Last Name</string>
    <string name="country">Country</string>
    <string name="firstName">First Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="phoneCountryCode">Phone Country Code</string>
    <string name="city">City</string>
    <string name="zipcode">ZipCode</string>
    <string name="evbNumber">EVB Number</string>
    <string name="zip">Zip</string>
    <string name="signUp">Sign up</string>
    <string name="update">Update</string>
    <string name="change">Change</string>
    <string name="password_required">A password is required</string>
    <string name="password_too_short">Password must be at least 6 characters</string>
    <string name="password_no_match">The password you entered does not match the confirmed password entry</string>
    <string name="registraion_email_subject">Ayla Sign-up Confirmation</string>
    <string name="registration_email_body_html"><![CDATA[
        <tr><td style="color: #153643; font-family: Arial, sans-serif; font-size: 24px;">
        <h2>Hello [[user_name]]!</h2>
        </td>
        </tr>
        <tr>
        <td style="padding: 20px 0 30px 0; color: #153643; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
        <b>[[property_name]]</b> is now <b>[[property_value]]</b> on your device <b>[[device_product_name]]</b>
        </td>
        </tr>
        <tr>
        <td style="padding: 20px 0 30px 0; color: #153643; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
        [[user_message]]
        </td>
        </tr>
        <tr>
        <td style="padding: 20px 0 30px 0; color: #153643; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
        <a href="http://www.aylanetworks.com/">Ayla Networks</a>
        </td>
        </tr>
     ]]></string>
    <string name="sign_up_success">Sign up successful. Check for a confirmation email to activate your account.</string>
    <string name="sign_up_error">There was an error during sign-up</string>
    <string name="add_device_menu">Add Device</string>
    <string name="attention">Attention</string>
    <string name="unregister_device">Unregister Device</string>
    <string name="unregister_confirm_title">Unregister Device</string>
    <string name="unregister_confirm_body">Are you sure you want to remove this device from your account?</string>
    <string name="waiting_unregister_title">Unregister Device</string>
    <string name="waiting_unregister_body">Busy unregistering device</string>
    <string name="unregister_failed">Unregister of device failed</string>
    <string name="unregister_success">The device has been unregistered</string>
    <string name="unregister_failure_timeout">Unregister device has still not completed successfully.</string>
    <string name="unregister_try_again">Try Again</string>
    <string name="factory_reset_device">Factory Reset and Unregister</string>
    <string name="factory_reset_confirm_title">Factory Reset Device</string>
    <string name="factory_reset_confirm_body">Are you sure you want to factory reset this device?  All settings will be lost, and the device will be removed from your account.</string>
    <string name="waiting_factory_reset_title">Factory Reset Device</string>
    <string name="waiting_factory_reset_body">Busy performing factory reset on device</string>
    <string name="factory_reset_failed">Factory reset of device failed</string>
    <string name="factory_reset_success">The device has been factory reset</string>
    <string name="factory_reset_failure_timeout">Factory Reset device has still not completed successfully.</string>
    <string name="factory_reset_try_again">Try Again</string>
    <string name="wifi_setup">WiFi Setup</string>
    <string name="wifi_show_password">Show password</string>
    <string name="wifi_requires_auth">Wi-Fi requires authentication</string>
    <string name="connect_device">Connect Device</string>
    <string name="dashboard">Dashboard</string>
    <string name="groups">Groups</string>
    <string name="scenes">Scenes</string>
    <string name="gateways">Gateways</string>
    <string name="account">Account</string>
    <string name="enter_new_password_body">Enter your new password in the fields below. Make sure to type the same password in both fields.</string>
    <string name="set_password">Set Password</string>
    <string name="add_wifi">Add Wi-Fi</string>
    <string name="wifi_name">Wi-Fi name (SSID)</string>
    <string name="enter_ssid">Enter the SSID</string>
    <string name="security">Security</string>
    <string name="email_notification">Notify via email</string>
    <string name="sms_notification">Notify by text message (SMS)</string>
    <string name="push_notification">Send a push notification to this device</string>
    <string name="notifications_description">You can be notified when your devices go online or offline. Check all of your preferred notification methods below. Note that for push notifications, each mobile device will need to be updated individually to enable or disable push notifictions to that particular device.</string>
    <string name="starting_on">Starting:</string>
    <string name="ending_on">Ending:</string>
    <string name="shares">Shares</string>
    <string name="share_read_only_message">Allow this user to:</string>
    <string name="share_read_only_button">View</string>
    <string name="share_read_write_button">Control</string>
    <string name="share_instructions">Enter the email address of the Ayla account holder you wish to share with</string>
    <string name="device_to_share">Devices to share:</string>
    <string name="now">Now</string>
    <string name="never">Never</string>
    <string name="share_button_title">Create Share</string>
    <string name="registration">Registration</string>
    <string name="contact_list">Contact List</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="use_fingerprint_to_authenticate">Use fingerprint to authenticate</string>
    <string name="always_expire_auth_token">Require Login</string>
    <string name="require_login_summary">When enabled, the application will always request credentials when the application is launched." If disabled, your credentials will be securely saved and automatically applied on product launch.</string>
    <string name="enable_geofence_feature">enable geofence feature</string>
    <string name="enable_geofence_summary">Enabling geofencing allows geofencing to be configured an operate as expected. Disabling geofencing will leave any existing configuration in place, but the geofencing feature will not work.</string>
</resources>