<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="@string/use_fingerprint_to_authenticate"
        android:title="@string/use_fingerprint_to_authenticate"
        android:persistent="true"
        android:defaultValue="false" />
    <CheckBoxPreference
        android:key="@string/always_expire_auth_token"
        android:title="@string/always_expire_auth_token"
        android:persistent="true"
        android:defaultValue="false"
        android:summary="@string/require_login_summary"/>
    <CheckBoxPreference
        android:key="@string/enable_geofence_feature"
        android:title="@string/enable_geofence_feature"
        android:persistent="true"
        android:defaultValue="true"
        android:summary="@string/enable_geofence_summary"/>
    />
</PreferenceScreen>