<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/ScrollView01"
            android:layout_width="match_parent"
            android:fillViewport="true"
            android:clickable="true"
            android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/signInRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sign_up_background"
        android:orientation="vertical"
        android:scrollbarStyle="insideOverlay"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/user_information_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/userInformation"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:ems="10"
            android:hint="@string/firstName"
            android:textStyle="italic"
            android:inputType="textCapWords|textPersonName" >
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:ems="10"
            android:hint="@string/lastName"
            android:textStyle="italic"
            android:inputType="textCapWords|textPersonName" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:ems="10"
            android:hint="@string/emailAddress"
            android:inputType="textEmailAddress"
            android:textStyle="italic"/>

        <EditText
            android:id="@+id/etCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:ems="10"
            android:hint="@string/country"
            android:textStyle="italic"
            android:inputType="textCapWords|textPostalAddress" />

        <EditText
            android:id="@+id/etPhoneCountryCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:ems="10"
            android:hint="@string/phoneCountryCode"
            android:textStyle="italic"
            android:inputType="number" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:ems="10"
            android:hint="@string/phoneNumber"
            android:textStyle="italic"
            android:inputType="phone" />

        <Button
            android:id="@+id/btnUpdate"
            style="@style/AgileLinkButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_gravity="right"
            android:layout_marginRight="8dp"
            android:text="@string/update" />


        <TextView
            android:id="@+id/password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/etCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:ems="10"
            android:hint="@string/currentPassword"
            android:textStyle="italic"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:ems="10"
            android:hint="@string/newPassword"
            android:textStyle="italic"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:ems="10"
            android:hint="@string/newPasswordConfirm"
            android:textStyle="italic"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnChangePassword"
            style="@style/AgileLinkButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_gravity="right"
            android:layout_marginRight="8dp"
            android:text="@string/change" />

        <Button
            android:id="@+id/btnLogOut"
            style="@style/AgileLinkButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:text="@string/log_out" />

        <Button
            android:id="@+id/btnDeleteAccount"
            style="@style/AgileLinkDestructiveButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:text="@string/delete_account" />


    </LinearLayout>
</ScrollView>