<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/device_details_background"
              android:clickable="true"
              tools:context="com.aylanetworks.agilelink.fragments.DeviceNotificationsFragment">

    <TextView
        android:id="@+id/textView"
        style="@style/PageHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifications"/>

    <!-- Spacer -->
    <View
        android:layout_width="match_parent"
        android:layout_height="24dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/notifications_description"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="24dp"
        >

    <CheckBox
        android:id="@+id/checkbox_email"
        android:text="@string/email_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/checkbox_sms"
        android:text="@string/sms_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/checkbox_push"
        android:text="@string/push_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>
